# pet

./: Makefile  README.md  main.py  pyproject.toml
my_package/: __init__.py  my_module.py
src/: context_manager.py  decorators.py  func_tools.py  generator.py  iter.py
src/algos/: bubble_sort.py  merge_sort.py  quick_sort.py
src/algos/sorts/: bubble_sort.py  insertion_sort.py  merge_sort.py  quick_sort.py  timsort.py
src/metaclasses/: bases.py  logger_mixin.py
src/patterns/: singleton.py
src/services/: base.py
src/structures/: __init__.py  hash_map.py  mutable_immutable.py
src/tasks/: brackets.py  find_largest_n_numbers.py  find_substring_length.py  queen_field_draw.py  sudoku.py  task_find_segment_intersection.py  two_pointers.py
tests/: test_mutable_immutable.py  test_try_except_else_finally.py
tools/: mem_control.py
